SC_BEGIN_PACKAGE(DOC)

OPTION(SC_DOC_GENERATE "Generate documentation" OFF)

IF (SC_DOC_GENERATE)
  SET(DOC_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})

  ADD_CUSTOM_TARGET(sc3doc ALL
                    COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/build-doc.py ${DOC_BUILD_DIR}
                    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

  INSTALL(DIRECTORY ${DOC_BUILD_DIR}/html DESTINATION ${SC3_PACKAGE_SHARE_DIR}/doc/seiscomp3)
  INSTALL(DIRECTORY ${DOC_BUILD_DIR}/man1 DESTINATION ${SC3_PACKAGE_SHARE_DIR}/man)
ENDIF (SC_DOC_GENERATE)
