SC_BEGIN_PACKAGE(GUI)

OPTION(SC_GLOBAL_GUI "Build graphical user interfaces (requires Qt4)" ON)
SET(CPACK_PACKAGE_EXECUTABLES "scrttv;scrttv" "scmv;scmv" "scolv;scolv" "scesv;scesv")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../system/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../system/libs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../trunk/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../trunk/libs)

IF (SC_GLOBAL_GUI)
	SET(Boost_DETAILED_FAILURE_MSG ON)
	FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options thread filesystem iostreams regex)
	IF (WIN32)
		ADD_DEFINITIONS("-DBOOST_ALL_NO_LIB")
		ADD_DEFINITIONS("-DBOOST_LIB_DIAGNOSTIC")
	ENDIF (WIN32)

	LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

	FIND_PACKAGE(Qt4 REQUIRED)
	FIND_PACKAGE(OpenSSL REQUIRED)

	SET(SC_LICENSE_LIB ${CMAKE_CURRENT_SOURCE_DIR}/license.cpp)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
	INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})

	SUBDIRS(libs apps)
ENDIF (SC_GLOBAL_GUI)
