SC_BEGIN_PACKAGE(IPGP)

OPTION(SC_IPGP_HYPO71 "Build Hypo71 which requires a fortran compiler" ON)

SET(Boost_DETAILED_FAILURE_MSG ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options thread filesystem iostreams regex)
IF (WIN32)
    ADD_DEFINITIONS("-DBOOST_ALL_NO_LIB")
    ADD_DEFINITIONS("-DBOOST_LIB_DIAGNOSTIC")
ENDIF (WIN32)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

SET(SC3_TRUNK_SRC_DIR ${CMAKE_SOURCE_DIR}/src/trunk)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/trunk/libs)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/trunk/libs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/system/libs)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/system/libs)

SUBDIRS(apps plugins)
