SC_BEGIN_PACKAGE(SYSTEM)

# Install CHANGLOG to share/doc/seiscomp3
IF(EXISTS "${SC3_PACKAGE_ROOT_SOURCE_DIR}/CHANGELOG.md")
	INSTALL(FILES ${SC3_PACKAGE_ROOT_SOURCE_DIR}/CHANGELOG.md DESTINATION ${SC3_PACKAGE_SHARE_DIR}/doc/seiscomp3 RENAME CHANGELOG)
ENDIF(EXISTS "${SC3_PACKAGE_ROOT_SOURCE_DIR}/CHANGELOG.md")


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libs)

SUBDIRS(libs apps)
