SC_BEGIN_PACKAGE(TRUNK)

OPTION(SC_TRUNK_DB_MYSQL "Add MYSQL support" ON)
OPTION(SC_TRUNK_DB_SQLITE3 "Add SQLite3 support" OFF)
OPTION(SC_TRUNK_DB_POSTGRESQL "Add PostgreSQL support" OFF)

#SET(Boost_DEBUG ON)

# Static Boost libs are not compiled with -fPIC on some
# systems so linking into a 64bit shared library does not work.
# Disabled it so far.
#SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_DETAILED_FAILURE_MSG ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options thread filesystem iostreams regex)
IF (WIN32)
        ADD_DEFINITIONS("-DBOOST_ALL_NO_LIB")
        ADD_DEFINITIONS("-DBOOST_LIB_DIAGNOSTIC")
ENDIF (WIN32)

FIND_PACKAGE(OpenSSL REQUIRED)

IF (SC_TRUNK_DB_MYSQL)
    FIND_PACKAGE(MySQL REQUIRED)
ENDIF (SC_TRUNK_DB_MYSQL)

IF (SC_TRUNK_DB_SQLITE3)
    FIND_PACKAGE(SQLite3 REQUIRED)
ENDIF (SC_TRUNK_DB_SQLITE3)

IF (SC_TRUNK_DB_POSTGRESQL)
    FIND_PACKAGE(PostgreSQL REQUIRED)
ENDIF (SC_TRUNK_DB_POSTGRESQL)

IF(WIN32)
	SET(SPREAD_REQUESTED_VERSION 4.0.1)
	FIND_PACKAGE(SPREAD REQUIRED)
ENDIF(WIN32)

SET(THIRD_PARTY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/libs/3rd-party)
INCLUDE_DIRECTORIES(${THIRD_PARTY_DIRECTORY})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../system/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../system/libs)

SUBDIRS(apps libs plugins)
