SET(EW2SC3_TARGET ew2sc3)

SET(
	EW2SC3_SOURCES
		main.cpp
		ew2sc3.cpp
)


SET(
	EW2SC3_HEADERS
		ew2sc3.h
		config.h
)

INCLUDE_DIRECTORIES(.)

SC_ADD_EXECUTABLE(EW2SC3 ${EW2SC3_TARGET})
SC_LINK_LIBRARIES_INTERNAL(${EW2SC3_TARGET} client)

SC_INSTALL_INIT(${EW2SC3_TARGET} ${CMAKE_SOURCE_DIR}/src/trunk/apps/templates/initd.py)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
