SET(RELOC_TARGET screloc)

SET(
	RELOC_SOURCES
		main.cpp
)

SC_ADD_EXECUTABLE(RELOC ${RELOC_TARGET})
SC_LINK_LIBRARIES_INTERNAL(${RELOC_TARGET} client)
SC_INSTALL_INIT(${RELOC_TARGET} ../../../trunk/apps/templates/initd.py)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
